--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,10 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family:  
-    Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.background-image{
+.background-image {
   background-image: url('../assets/image-2-bg.png');
   background-size: cover;
   background-repeat: no-repeat;
@@ -16,49 +15,49 @@ a {
   text-decoration: none;
 }
 
-.container { 
-  width: 100%; 
-  height: 62vh; 
-  display: flex; 
-  flex-direction: column; 
-  justify-content: center; 
-  align-items: center; 
-} 
-
-.container h1 { 
-  color: rgb(255, 255, 255); 
-  font-weight: 700; 
-  font-size: 25px; 
-  text-align: center; 
+.container {
+  width: 100%;
+  height: 62vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.converter-row { 
-  display: flex; 
-  width: 85%; 
-  justify-content: space-between; 
+.container h1 {
+  color: rgb(255, 255, 255);
+  font-weight: 700;
+  font-size: 25px;
+  text-align: center;
+}
+
+.converter-row {
+  display: flex;
+  width: 85%;
+  justify-content: space-between;
   align-items: center;
-  background-color:rgba(173, 251, 255, 0.3600000143);
+  background-color: rgba(173, 251, 255, 0.36);
   border-radius: 2.7rem;
   box-shadow: 0.3rem 0.4rem 0.7rem rgba(0, 0, 0, 0.25);
   box-sizing: border-box;
   flex-shrink: 0;
   padding: 4rem 1.5rem 4rem 1.5rem;
-} 
+}
 
-.col { 
-  flex-basis: 32%; 
+.col {
+  flex-basis: 32%;
   text-align: center;
-} 
+}
 
-.col label { 
+.col label {
   font-size: 20px;
-  color: #ffffff; 
-} 
+  color: #ffffff;
+}
 
-.col input { 
-  border-radius: 5px; 
+.col input {
+  border-radius: 5px;
   text-align: center;
-  background-color: rgba(173, 251, 255, 0.3600000143);
+  background-color: rgba(173, 251, 255, 0.36);
   border-radius: 2.7rem;
   box-shadow: 0.3rem 0.4rem 0.7rem rgba(0, 0, 0, 0.25);
   font-size: 21px;
@@ -75,84 +74,77 @@ a {
   bottom: 0;
   position: fixed;
 }
-  
+
 .header {
   align-items: center;
   display: flex;
   padding: 1rem 0rem 1.726rem 1.265rem;
-  
-  .logo {
-    height: 5.2rem;
-    width: 5.3469rem;
-    padding-top: 1em;
-    padding-left: 1em;
-  }
-  .auto-group {
-    align-items: center;
-    box-sizing: border-box;
-    display: flex;
-    flex-shrink: 0;
-    height: 100%;
-    padding: 0rem 0rem 1.726rem 0.2rem;
+}
 
-    .text-group {
-      height: 100%;
-      position: relative;
-      .btn:hover {
-        background-color: #337073;
-        border-radius: 0.8rem;
-        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-      }
-    
-      .text {
-        align-items: center;
-        display: flex;
-        height: 2.5rem;
-        left: 2.3884rem;
-        position: absolute;
-        top: 0.3463rem;
-        
-        .temperature {
-        color: #ffffff;
-        flex-shrink: 0;
-        font-family: Inter, 'Source Sans Pro';
-        font-size: 1.5rem;
-        font-weight: 800;
-        line-height: 1.2125;
-        margin-right: 4rem;
-        white-space: nowrap;
-        }
-        .formula {
-        color: #ffffff;
-        flex-shrink: 0;
-        font-family: Inter, 'Source Sans Pro';
-        font-size: 1.5rem;
-        font-weight: 800;
-        line-height: 1.2125;
-        margin-right: 4rem;
-        white-space: nowrap;
-        }
-        .about-me {
-        color: #ffffff;
-        flex-shrink: 0;
-        font-family: Inter, 'Source Sans Pro';
-        font-size: 1.5rem;
-        font-weight: 800;
-        line-height: 1.2125;
-        margin-right: 4rem;
-        white-space: nowrap;
-        }
-        .contact-us {
-        color: #ffffff;
-        flex-shrink: 0;
-        font-family: Inter, 'Source Sans Pro';
-        font-size: 1.5rem;
-        font-weight: 800;
-        line-height: 1.2125;
-        margin-right: 4rem;
-        white-space: nowrap;
-        }
-      }
-    }
+.logo {
+  height: 5.2rem;
+  width: 5.3469rem;
+  padding-top: 1em;
+  padding-left: 1em;
+}
+
+.auto-group {
+  align-items: center;
+  box-sizing: border-box;
+  display: flex;
+  flex-shrink: 0;
+  height: 100%;
+  padding: 0rem 0rem 1.726rem 0.2rem;
+}
+
+.text-group {
+  height: 100%;
+  position: relative;
+}
+
+.text-group .btn:hover {
+  background-color: #337073;
+  border-radius: 0.8rem;
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+.text-group .text {
+  align-items: center;
+  display: flex;
+  height: 2.5rem;
+  left: 2.3884rem;
+  position: absolute;
+  top: 0.3463rem;
+}
+
+.text-group .text .temperature,
+.text-group .text .formula,
+.text-group .text .about-me,
+.text-group .text .contact-us {
+  color: #ffffff;
+  flex-shrink: 0;
+  font-family: Inter, 'Source Sans Pro';
+  font-size: 1.5rem;
+  font-weight: 800;
+  line-height: 1.2125;
+  margin-right: 4rem;
+  white-space: nowrap;
+}
+
+/* Media Query for Mobile View */
+@media only screen and (max-width: 600px) {
+  .container {
+    height: auto;
+    padding: 2rem;
+  }
+  
+  .converter-row {
+    flex-direction: column;
+    width: 100%;
+  }
+  
+  .col {
+    flex-basis: 100%;
+    margin-bottom: 1.5rem;
   }
 }
